microservices/Examples.MicroserviceOne/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: examples-microserviceone
  namespace: examples
spec:
  replicas: 3
  selector:
    matchLabels:
      microservice: examples-microserviceone
  template:
    metadata:
      labels:
        microservice: examples-microserviceone
    spec:
      containers:
      - image: k3d-kube-examples-registry:5050/examples-microserviceone:latest
        name: examples-microserviceone
        ports:
        - containerPort: 6250
          protocol: TCP

        startupProbe:
          host:
          httpGet:
            path: /mgt/startup-check
            port: 6250
          initialDelaySeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        
        readinessProbe:
          host:
          httpGet:
            path: /mgt/ready-check
            port: 6250
          initialDelaySeconds: 2
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 1
        
        livenessProbe:
          host:
          httpGet:
            path: /mgt/health-check
            port: 6250
          initialDelaySeconds: 2
          periodSeconds: 10

        volumeMounts:
        - name: config
          mountPath: /etc/microservice/configs
        - name: config-secrets
          mountPath: /etc/microservice/secrets
      volumes:
      - name: config
        configMap:
          name: examples-microserviceone.settings
      - name: config-secrets
        secret:
          secretName: examples-microserviceone.secrets
---
apiVersion: v1
kind: Service
metadata:
  name: examples-microserviceone
  namespace: examples
spec:
  ports:
  - port: 80
    targetPort: 6250
  selector:
    microservice: examples-microserviceone
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examples-microserviceone
  namespace: examples
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: examples-microserviceone.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: examples-microserviceone
            port:
              number: 80
